//
// Created by avera on 05.05.2022.
//
#pragma once


struct EventInfo {
double coordX;
double coordY;
double driveTime;
int carToSend;
bool isFalseAlarm;
};


